implement getting games logic
